<resources>
    <string name="app_name">Lab3</string>

    <string name="title_main">Мои задачи</string>
    <string name="title_add_task">Новая задача</string>
    <string name="title_edit_task">Редактировать задачу</string>
    <string name="title_settings">Настройки</string>

    <string name="hint_task_title">Название задачи</string>
    <string name="hint_task_description">Описание (необязательно)</string>
    <string name="hint_category">Категория</string>
    <string name="label_due_date">Дата выполнения</string>
    <string name="label_due_time">Время выполнения</string>
    <string name="label_notifications">Уведомления</string>
    <string name="label_attachments">Вложения</string>

    <string name="btn_save">Сохранить</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_ok">OK</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_edit">Редактировать</string>
    <string name="btn_set_date">Выбрать дату</string>
    <string name="btn_set_time">Выбрать время</string>
    <string name="btn_add_attachment">Добавить вложение</string>

    <string name="menu_search">Поиск</string>
    <string name="menu_filter">Фильтр</string>
    <string name="menu_sort">Сортировка</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_statistics">Статистика</string>

    <string name="category_general">Общие</string>
    <string name="category_work">Работа</string>
    <string name="category_personal">Личное</string>
    <string name="category_study">Учеба</string>
    <string name="category_shopping">Покупки</string>
    <string name="category_health">Здоровье</string>
    <string name="category_finance">Финансы</string>
    <string name="category_hobby">Хобби</string>
    <string name="category_travel">Путешествия</string>

    <string name="notification_5min">5 минут</string>
    <string name="notification_15min">15 минут</string>
    <string name="notification_30min">30 минут</string>
    <string name="notification_1hour">1 час</string>
    <string name="notification_1day">1 день</string>

    <string name="msg_task_created">Задача создана</string>
    <string name="msg_task_updated">Задача обновлена</string>
    <string name="msg_task_deleted">Задача удалена</string>
    <string name="msg_task_completed">Задача выполнена!</string>
    <string name="msg_task_uncompleted">Задача помечена как невыполненная</string>
    <string name="msg_task_duplicated">Задача дублирована</string>

    <string name="error_title_required">Введите название задачи</string>
    <string name="error_category_required">Выберите категорию</string>
    <string name="error_date_required">Выберите дату выполнения</string>

    <string name="dialog_delete_task_title">Удалить задачу</string>
    <string name="dialog_delete_task_message">Вы уверены, что хотите удалить задачу \"%1$s\"?</string>
    <string name="dialog_unsaved_changes_title">Несохраненные изменения</string>
    <string name="dialog_unsaved_changes_message">У вас есть несохраненные изменения. Сохранить задачу?</string>
    <string name="dialog_save">Сохранить</string>
    <string name="dialog_dont_save">Не сохранять</string>

    <string name="empty_tasks_title">Нет задач</string>
    <string name="empty_tasks_message">Нажмите кнопку + чтобы\nсоздать первую задачу</string>

    <string name="time_today">Сегодня</string>
    <string name="time_tomorrow">Завтра</string>
    <string name="time_yesterday">Вчера</string>
    <string name="time_overdue">Просрочено</string>
    <string name="time_now">Сейчас</string>

    <string name="settings_display">Отображение</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_tasks">Задачи</string>
    <string name="settings_data">Данные</string>
    <string name="settings_info">Информация</string>

    <string name="pref_hide_completed">Скрывать завершенные задачи</string>
    <string name="pref_hide_completed_summary">Не показывать выполненные задачи в списке</string>
    <string name="pref_theme">Тема приложения</string>
    <string name="pref_notification_time">Время уведомления</string>
    <string name="pref_default_category">Категория по умолчанию</string>
    <string name="pref_sort_order">Сортировка задач</string>
    <string name="pref_backup">Резервное копирование</string>
    <string name="pref_reset">Сбросить настройки</string>
    <string name="pref_about">О приложении</string>

    <string name="notification_channel_name">Напоминания о задачах</string>
    <string name="notification_channel_description">Уведомления о предстоящих задачах</string>
    <string name="notification_title">Напоминание: %1$s</string>
    <string name="notification_action_complete">Выполнено</string>
    <string name="notification_action_snooze">Отложить</string>

    <string name="permission_notification_title">Разрешение на уведомления</string>
    <string name="permission_notification_message">Для напоминаний о задачах рекомендуется включить уведомления в настройках приложения.</string>
    <string name="permission_camera">Разрешение на камеру</string>
    <string name="permission_storage">Разрешение на файлы</string>

    <string name="cd_add_task">Добавить задачу</string>
    <string name="cd_task_completed">Задача выполнена</string>
    <string name="cd_task_has_attachment">Есть вложения</string>
    <string name="cd_task_has_notification">Уведомления включены</string>
    <string name="cd_high_priority">Высокий приоритет</string>
    <string name="cd_medium_priority">Средний приоритет</string>
    <string name="task_name">Task name</string>
    <string name="description_optional">Description (optional)</string>
    <string name="category">Category</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_time">Select time</string>
    <string name="date_and_time_of_completion">Date and time of completion</string>
    <string name="notifications">Notifications</string>
    <string name="_5_min">5 min</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_1_hr">1 hr</string>
    <string name="_1_day">1 day</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachment">Add attachment</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sorting">Sorting</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="add_a_task">Add a task</string>
    <string name="click_the_button_to_create_your_first_task">Click the + button to create your first task</string>
    <string name="no_tasks">No tasks</string>
    <string name="has_attachments">Has attachments</string>

</resources>